// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. closeicon renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={4294626014}
      stroke={4294626014}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`2. closeroundicon renders with different colours 1`] = `
<RNSVGSvgView
  fill="none"
>
  <RNSVGGroup
    fill={null}
  >
    <RNSVGMask>
      <RNSVGPath
        fill={4294967295}
      />
    </RNSVGMask>
    <RNSVGGroup>
      <RNSVGRect
        fill={4294967295}
      />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`3. deleteicon renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGGroup
      fill={null}
    >
      <RNSVGGroup
        stroke={4278190080}
      >
        <RNSVGGroup>
          <RNSVGGroup>
            <RNSVGGroup>
              <RNSVGPath />
              <RNSVGPath />
            </RNSVGGroup>
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`4. glassmagnifiericon renders with different colours 1`] = `
<RNSVGSvgView
  fill="none"
>
  <RNSVGGroup
    fill={null}
  >
    <RNSVGMask>
      <RNSVGPath
        fill={4294967295}
      />
    </RNSVGMask>
    <RNSVGGroup>
      <RNSVGRect
        fill={4294967295}
      />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`5. iconcheckmark renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={null}
      stroke={2566914048}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`6. iconcopylink renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={4294626014}
      stroke={4290838510}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`7. iconfacebook renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke="#c0ffee"
/>
`;

exports[`8. iconforwardarrow renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke={null}
/>
`;

exports[`9. iconsavebookmark renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke="#c0ffee"
/>
`;

exports[`10. iconstar renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={4294626014}
      stroke={4290838510}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`11. icontwitter renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke="#c0ffee"
/>
`;

exports[`12. iconvideo renders with different colours 1`] = `
Array [
  <ARTShape
    fill={
      Array [
        0,
        0.9803921568627451,
        0.792156862745098,
        0.8705882352941177,
        1,
      ]
    }
    stroke="#c0ffee"
  />,
  <ARTShape
    fill={
      Array [
        0,
        0.9803921568627451,
        0.792156862745098,
        0.8705882352941177,
        1,
      ]
    }
    stroke="#c0ffee"
  />,
]
`;

exports[`13. iconvideo360player renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke="#c0ffee"
/>
`;

exports[`14. leftchevron renders with different colours 1`] = `
<RNSVGSvgView
  fill="none"
>
  <RNSVGGroup
    fill={null}
  >
    <RNSVGMask>
      <RNSVGPath
        fill={4294967295}
      />
    </RNSVGMask>
    <RNSVGGroup>
      <RNSVGRect
        fill={4294967295}
      />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`15. rightorientedglassmagnifier renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGGroup
      fill={null}
    >
      <RNSVGGroup
        stroke={4278190080}
      >
        <RNSVGGroup>
          <RNSVGGroup>
            <RNSVGCircle />
            <RNSVGPath />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`16. thestlogo renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke="#c0ffee"
/>
`;

exports[`17. thetimeslogo renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke="#c0ffee"
/>
`;
